<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/fragment_container2"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/turkuaz_acik_gri">

    <TextView
        android:id="@+id/tv_has_zat_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="@string/has_zat_orani"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_has_zat_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_has_zat_baslik"
        />

    <TextView
        android:id="@+id/tv_yat_dol_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/yat_dol_orani"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_has_zat_yazi" />

    <TextView
        android:id="@+id/tv_yat_dol_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_yat_dol_baslik" />

    <TextView
        android:id="@+id/tv_eris_yog_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/eris_yog_orani"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_yat_dol_yazi" />

    <TextView
        android:id="@+id/tv_eris_yog_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_eris_yog_baslik" />

    <TextView
        android:id="@+id/tv_vent_dol_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/vent_dol_orani"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_eris_yog_yazi" />

    <TextView
        android:id="@+id/tv_vent_dol_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vent_dol_baslik" />

    <TextView
        android:id="@+id/tv_ort_tem_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/ort_tem_orani"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vent_dol_yazi" />

    <TextView
        android:id="@+id/tv_ort_tem_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ort_tem_baslik" />

    <TextView
        android:id="@+id/tv_fililasyon_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/ort_tem_orani"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_ort_tem_yazi" />

    <TextView
        android:id="@+id/tv_fililasyon_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fililasyon_baslik" />


</androidx.constraintlayout.widget.ConstraintLayout>