<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_container3"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/turkuaz_koyu_gri">

    <TextView
        android:id="@+id/tv_toplam_test_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/top_test_sayisi"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="50dp"
        android:background="@color/turkuaz_org"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_toplam_test_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/turkuaz_acik_gri"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_test_baslik"
        />

    <TextView
        android:id="@+id/tv_toplam_hasta_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/top_vaka_sayisi"
        android:background="@color/turkuaz_org"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_test_yazi" />

    <TextView
        android:id="@+id/tv_toplam_hasta_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/turkuaz_acik_gri"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_hasta_baslik" />

    <TextView
        android:id="@+id/tv_toplam_vefat_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/top_fevaf_sayisi"
        android:background="@color/turkuaz_org"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_hasta_yazi" />

    <TextView
        android:id="@+id/tv_toplam_vefat_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/turkuaz_acik_gri"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_vefat_baslik" />

    <TextView
        android:id="@+id/tv_agir_hasta_sayisi_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/agir_hasta_sayisi"
        android:background="@color/turkuaz_org"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_vefat_yazi" />

    <TextView
        android:id="@+id/tv_agir_hasta_sayisi_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/turkuaz_acik_gri"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agir_hasta_sayisi_baslik" />

    <TextView
        android:id="@+id/tv_toplam_iyilesen_baslik"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/iyilesen_sayisi"
        android:background="@color/turkuaz_org"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agir_hasta_sayisi_yazi" />

    <TextView
        android:id="@+id/tv_toplam_iyilesen_yazi"
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:gravity="center"

        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@color/turkuaz_acik_gri"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_toplam_iyilesen_baslik" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="570dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>